--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 		.inactiveCustom {color:#A9A9A9}
 	</style>
 
-	<link rel="shortcut icon" type="image/png" href="/static/Images/Profile/profileCircular.png"/>
+	<link rel="shortcut icon" type="image/jpg" href="/static/Images/Profile/profile.jpg"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Mayank Kumar Singh's Home Page">
-	<meta name="author" content="Mayank Kumar Singh">
+	<meta name="description" content="Biral Kumar Pradhan's Home Page">
+	<meta name="author" content="Biral Kumar Pradhan">
 	<meta charset="UTF-8">
 	<meta name="keywords" content="machine learning, artificial intelligence, coding">
 
 	<meta property="og:title" content="Mayank's HomePage">
-	<meta property="og:image" content="/static/Images/Profile/profileCircular512X512.png">
+	<meta property="og:image" content="/static/Images/Profile/profile.jpg">
 	<meta property="og:description" content="Mayank Kumar Singh's Home Page">
 
 	<title>Biral Kumar Pradhan</title>
