--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		.inactiveCustom {color:#A9A9A9}
 	</style>
 
-	<link rel="shortcut icon" type="image/jpg" href="/static/img/profile.jpg"/>
+	<link rel="shortcut icon" type="image/jpg" href="img/profile.jpg"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Biral Kumar Pradhan's Home Page">
@@ -27,7 +27,7 @@
 	<meta name="keywords" content="machine learning, artificial intelligence, coding">
 
 	<meta property="og:title" content="Biral's HomePage">
-	<meta property="og:image" content="/static/img/profile.jpg">
+	<meta property="og:image" content="img/profile.jpg">
 	<meta property="og:description" content="Biral Kumar Pradhan's Home Page">
 
 	<title>Biral Kumar Pradhan</title>
