--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
 		<div class="col-lg-8">
 
 			<div class="shadow row bg-light mb-5 mt-4 mx-1">
-				<a href="/research/GraphConvolution"><img src="images/HowGCNNWorks.png" width="100%"></a>
+				<a href="https://github.com/biral-pradhan/Sanjay"><img src="img/Sanjay.jpg" width="100%"></a>
 				<div class="px-4 pt-5 pb-4">
 					<a class="hrefWithoutDecoration" href="https://arxiv.org/abs/2005.12147" target="_blank"><h2>Sanjay : The Tactile Braille Interface <i class="fa fa-external-link" style="font-size:12px"></i></h2></a>
 					<p>Last Updated: 27th May</p>
 					<p>The limited availability of printed Braille Scripts restricts access of the visually impaired to potential knowledge out there. It is high time for refreshabale and verstaile Braille displays...</p>
-					<button type="button" class="btn btn-light btn-outline-dark" onClick="window.location = '/research/GraphConvolution';">Continue Reading</button>
+					<button type="button" class="btn btn-light btn-outline-dark" onClick="window.location = 'https://github.com/biral-pradhan/Sanjay';">Continue Reading</button>
 				</div>
 			</div>
 
 			<div class="row bg-light mb-5 shadow mx-1">
-				<a href="/research/VoiceSeparation"><img src="images/ICASSP2020.png" width="100%"></a>
+				<a href="https://github.com/biral-pradhan/Verilog-Moving-Average-Calculator"><img src="img/chip_design_banner.jpg" width="100%"></a>
 				<div class="px-4 pt-5 pb-4">
 					<a class="hrefWithoutDecoration" href="https://ieeexplore.ieee.org/document/8244978" target="_blank"><h2>VLSI architecture for IEEE single precision floating point moving average calculator <i class="fa fa-external-link" style="font-size:12px"></i></h2></a>
 					<p>Last Updated: 26th April</p>
 					<p>Moving average is largely used in various image and signal processing applications. Direct calculation of moving average requires a large number of additions which depends upon the segment length. A moving average calculation method…</p>
-					<button type="button" class="btn btn-light btn-outline-dark" onClick="window.location = '/research/VoiceSeparation';">Continue Reading</button>
+					<button type="button" class="btn btn-light btn-outline-dark" onClick="window.location = 'https://github.com/biral-pradhan/Verilog-Moving-Average-Calculator';">Continue Reading</button>
 				</div>
 			</div>
 
@@ -115,7 +115,7 @@
 		<div class="col-lg-4 pt-5">
 			<div class="row py-5 px-4 bg-light mb-5 shadow mx-1">
 				<div class="col text-center">
-					<img class="pb-5" src="images/profileCircular512X512.png" width="100%" style="max-width: 200px">
+					<img class="pb-5" src="img/profile.jpg" width="100%" style="max-width: 200px">
 					<p>
 						I am currently in my third year of B.Tech at National Institute of Technology (NITW) Warangal, pursuing the stream of Electronics and Communication Engineering. I am highly interested in VLSI domain, and want to build a career in the same. I am highly adaptive and try to pursue an interdiscplinary approach to problem solving. <br>
 	 					<br>
