--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		<div class="col-lg-8">
 
 			<div class="shadow row bg-light mb-5 mt-4 mx-1">
-				<a href="https://github.com/biral-pradhan/Sanjay"><img src="img/Sanjay.jpg" width="100%"></a>
+				<a href="https://github.com/biral-pradhan/Sanjay"><img src="img/Sanjay.JPG" width="100%"></a>
 				<div class="px-4 pt-5 pb-4">
 					<a class="hrefWithoutDecoration" href="https://arxiv.org/abs/2005.12147" target="_blank"><h2>Sanjay : The Tactile Braille Interface <i class="fa fa-external-link" style="font-size:12px"></i></h2></a>
 					<p>Last Updated: 27th May</p>
