--- a/profile.html
+++ b/profile.html
@@ -98,7 +98,7 @@
 						<h2>My Resume <a href="pdf/184112_Biral_Pradhan_CV_compressed.pdf" target="_blank" class="hrefWithoutDecoration"><button type="button" class="btn btn-light btn-outline-dark">View the pdf version</button></h2>
 					</div>
 					<div class="p-0 shadow m-3">
-						<a href="pdf/184112_Biral_Pradhan_CV_compressed.pdf" target="_blank"><img src="images/Resume.jpg" width="100%"></a>
+						<a href="pdf/184112_Biral_Pradhan_CV_compressed.pdf" target="_blank"><img src="img/Resume.jpg" width="100%"></a>
 					</div>
 				</div>
 			</div>
