--- a/profile.html
+++ b/profile.html
@@ -106,7 +106,7 @@
 		<div class="col-lg-4 pt-5">
 			<div class="row py-5 px-4 bg-light mb-5 shadow mx-1">
 				<div class="col text-center">
-					<img class="pb-5" src="images/profile.jpg" width="100%" style="max-width: 200px">
+					<img class="pb-5" src="img/profile.jpg" width="100%" style="max-width: 200px">
 					<p>
 						I am currently in my third year of B.Tech at National Institute of Technology (NITW) Warangal, pursuing the stream of Electronics and Communication Engineering. I am highly interested in VLSI domain, and want to build a career in the same. I am highly adaptive and try to pursue an interdiscplinary approach to problem solving. <br>
 	 					<br>
